testimonials more readable and skills logos fixed

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -708,26 +708,34 @@ call-to-action .button {
    margin: 0 0px 30px 0px;
    padding-left: 0;
    position: relative;
-   text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
+   text-shadow: 0px 1px 3px rgb(255, 255, 255);
 }
+
 #testimonials blockquote:before { content: none; }
 #testimonials blockquote p {
-   font-family: 'librebaskerville-italic', serif;
+   font-family: serif;
    padding: 0;
    font-size: 24px;
    line-height: 48px;
-   color: rgb(49, 47, 47)
+   color: rgb(27, 27, 27)
 }
 #testimonials blockquote cite {
    display: block;
-   font-size: 12px;
+   font-size: 15px;
    font-style: normal;
    line-height: 18px;
-   color: rgb(58, 51, 51);
+   color: rgb(0, 0, 0);
+   text-align: right;
+   margin-bottom: 80px;
 }
 #testimonials blockquote cite:before { content: "\2014 \0020"; }
 #testimonials blockquote cite a,
 #testimonials blockquote cite a:visited { color: #8B9798; border: none }
+
+.moreInfo h4{
+   color: #3a3733;
+   text-align: right;
+}
 
 /* Flex Slider
 /* ------------------------------------------------------------------ */
@@ -850,7 +858,7 @@ call-to-action .button {
 
 #contact h4 {
    font: 16px/24px 'opensans-bold', sans-serif;
-   color: #EBEEEE;
+   color: #5ca5c7;
    margin-bottom: 6px;
 }
 #contact p.lead {
